--- a/public/assets/custom.scss
+++ b/public/assets/custom.scss
@@ -3,7 +3,7 @@
   --darkkhaki: #c5a572;
   --dimgray: 	#D0D0D0;
   --font-family-montserrat: 'Montserrat', Arial, Helvetica, sans-serif;
-  --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
+  --font-family-bellefair: "Bellefair",Arial,Helvetica,sans-serif
 }
 
 @mixin overlay-background($overlay, $image: false) {
