--- a/src/index.scss
+++ b/src/index.scss
@@ -5,5 +5,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: var(--font-family-montserrat);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 26px;
+  color: #4d5257;
 }
 
