create reservation page

--- a/public/assets/custom.scss
+++ b/public/assets/custom.scss
@@ -35,4 +35,5 @@ $theme-colors: (
 @import './home.scss';
 @import './banner.scss';
 @import './menus.scss';
+@import './reservation.scss';
 @import '../node_modules/bootstrap/scss/bootstrap';
