design login/signup page

--- a/public/assets/custom.scss
+++ b/public/assets/custom.scss
@@ -36,4 +36,5 @@ $theme-colors: (
 @import './banner.scss';
 @import './menus.scss';
 @import './reservation.scss';
+@import './modal.scss';
 @import '../node_modules/bootstrap/scss/bootstrap';
