--- a/src/index.scss
+++ b/src/index.scss
@@ -11,8 +11,11 @@ body {
   color: #4d5257;
 }
 
-.btn {
+.btn, button {
   outline: none !important;
+  :focus {
+    box-shadow: 0;
+  }
 }
 
 a {
