--- a/public/assets/custom.scss
+++ b/public/assets/custom.scss
@@ -37,4 +37,5 @@ $theme-colors: (
 @import './menus.scss';
 @import './reservation.scss';
 @import './modal.scss';
+@import './toast.scss';
 @import '../node_modules/bootstrap/scss/bootstrap';
