--- a/src/index.scss
+++ b/src/index.scss
@@ -13,10 +13,10 @@ body {
 
 .btn, button {
   outline: none !important;
-  box-shadow: none;
+  box-shadow: none !important;
   :focus {
-    box-shadow: none;
-    outline: none;
+    box-shadow: none !important;
+    outline: none !important;
   }
 }
 
