--- a/public/assets/custom.scss
+++ b/public/assets/custom.scss
@@ -38,4 +38,5 @@ $theme-colors: (
 @import './reservation.scss';
 @import './modal.scss';
 @import './toast.scss';
+@import './paymentForm.scss';
 @import '../node_modules/bootstrap/scss/bootstrap';
