add smooth scrolling to window

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,9 @@
 @import '../public/assets/custom.scss';
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
