--- a/public/assets/custom.scss
+++ b/public/assets/custom.scss
@@ -38,5 +38,6 @@ $theme-colors: (
 @import './reservation.scss';
 @import './modal.scss';
 @import './toast.scss';
-@import './paymentForm.scss';
+@import './checkout.scss';
+@import './wrapper.scss';
 @import '../node_modules/bootstrap/scss/bootstrap';
