--- a/public/assets/custom.scss
+++ b/public/assets/custom.scss
@@ -29,6 +29,7 @@ $theme-colors: (
   'darkkhaki': #c5a572,
   'dimgray': #D0D0D0,
   'ghostwhite': #f7f9fb,
+  'lavender': #e9ecef
 );
 
 @import './header.scss';
@@ -40,4 +41,5 @@ $theme-colors: (
 @import './toast.scss';
 @import './checkout.scss';
 @import './wrapper.scss';
+@import './footer.scss';
 @import '../node_modules/bootstrap/scss/bootstrap';
