--- a/public/assets/reservation.scss
+++ b/public/assets/reservation.scss
@@ -19,14 +19,40 @@
   }
 }
 
-@media screen and (max-width: 1000px) {
+.complimentary-card {
+  .card {
+    @include overlay-background(0.5, '/images/card-image.jpg');
+    font-family: var(--font-family-bellefair);
+    font-weight: 400;
+    .card-inner {
+      border: 1px dashed var(--darkkhaki);
+      .text-header{
+        .time-header-0 {
+          font-size: 1rem;
+          line-height: 1.6rem;
+          font-family: var(--font-family-montserrat);
+        }
+        .time-header-1 > h2 {
+          font-size: 2.3rem;
+        }
+      }
+      .time-info {
+        h2 {
+          font-size: 1rem;
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 800px) {
   .reservation-wrapper {
     .container-body {
       padding: 0;
     }
   }
+
+  .complimentary-card{
+    display: none;
+  }
 }
 
-// @media screen and (max-width: 600px) {
-
-// }
