--- a/public/assets/toast.scss
+++ b/public/assets/toast.scss
@@ -1,14 +1,14 @@
 .Toastify__toast--error.toast-custom-style,
 .Toastify__toast--success.toast-custom-style {
-  // border-radius: 0.2rem;
-  // font-family: Montserrat-Light;
-  // min-height: inherit;
-  // padding-right: 2rem;
-  // position: relative;
-  // top: 3rem;
-  // right: 1.5rem;
-  // left: 0;
-  // margin: 1em;
+  border-radius: 0.2rem;
+  font-family: Montserrat-Light;
+  min-height: inherit;
+  padding-right: 2rem;
+  position: relative;
+  top: 3rem;
+  right: 1.5rem;
+  left: 0;
+  margin: 1em;
 
   >.Toastify__toast-body {
     font-size: 0.8rem;
